// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TransactionService #multiSignature 1`] = `
SignedTransactionData {
  "bigNumberService": BigNumberService {
    "configRepository": ConfigRepository {},
  },
  "broadcastData": Object {
    "asset": Object {
      "mandatoryKeys": Array [
        "5f7f98c50575a4a7e70a46ff35b72f4fe2a1ad3bc9a918b692d132d9c556bdf0",
        "ac574896c846b59477a9115b952563938c48d0096b84846c0b634a621e1774ed",
      ],
      "numberOfSignatures": 2,
      "optionalKeys": Array [],
    },
    "assetID": 0,
    "fee": "314000",
    "id": "a218ca9189872bf8bf836f3e1ebfc7770752551ae4fc61b7bb45f87fee89171f",
    "moduleID": 4,
    "multiSignature": Object {
      "mandatoryKeys": Array [
        "5f7f98c50575a4a7e70a46ff35b72f4fe2a1ad3bc9a918b692d132d9c556bdf0",
        "ac574896c846b59477a9115b952563938c48d0096b84846c0b634a621e1774ed",
      ],
      "numberOfSignatures": 2,
      "optionalKeys": Array [],
    },
    "nonce": "8",
    "senderPublicKey": "ac574896c846b59477a9115b952563938c48d0096b84846c0b634a621e1774ed",
    "signatures": Array [
      "300716832537cc8930a8608fbf2e8ccce869411935ed863f721617e3d8a73253e645380758cac47f1a20a115b68146512ac4d89aa1c7a499c34a10c39bc63001",
      "",
      "300716832537cc8930a8608fbf2e8ccce869411935ed863f721617e3d8a73253e645380758cac47f1a20a115b68146512ac4d89aa1c7a499c34a10c39bc63001",
    ],
    "timestamp": "2021-01-01T12:00:00.000Z",
  },
  "decimals": 8,
  "identifier": "a218ca9189872bf8bf836f3e1ebfc7770752551ae4fc61b7bb45f87fee89171f",
  "signedData": Object {
    "asset": Object {
      "mandatoryKeys": Array [
        "5f7f98c50575a4a7e70a46ff35b72f4fe2a1ad3bc9a918b692d132d9c556bdf0",
        "ac574896c846b59477a9115b952563938c48d0096b84846c0b634a621e1774ed",
      ],
      "numberOfSignatures": 2,
      "optionalKeys": Array [],
    },
    "assetID": 0,
    "fee": "314000",
    "id": "a218ca9189872bf8bf836f3e1ebfc7770752551ae4fc61b7bb45f87fee89171f",
    "moduleID": 4,
    "multiSignature": Object {
      "mandatoryKeys": Array [
        "5f7f98c50575a4a7e70a46ff35b72f4fe2a1ad3bc9a918b692d132d9c556bdf0",
        "ac574896c846b59477a9115b952563938c48d0096b84846c0b634a621e1774ed",
      ],
      "numberOfSignatures": 2,
      "optionalKeys": Array [],
    },
    "nonce": "8",
    "senderPublicKey": "ac574896c846b59477a9115b952563938c48d0096b84846c0b634a621e1774ed",
    "signatures": Array [
      "300716832537cc8930a8608fbf2e8ccce869411935ed863f721617e3d8a73253e645380758cac47f1a20a115b68146512ac4d89aa1c7a499c34a10c39bc63001",
      "",
      "300716832537cc8930a8608fbf2e8ccce869411935ed863f721617e3d8a73253e645380758cac47f1a20a115b68146512ac4d89aa1c7a499c34a10c39bc63001",
    ],
    "timestamp": "2021-01-01T12:00:00.000Z",
  },
}
`;

exports[`TransactionService #multiSignature 2`] = `
SignedTransactionData {
  "bigNumberService": BigNumberService {
    "configRepository": ConfigRepository {},
  },
  "broadcastData": Object {
    "asset": Object {
      "mandatoryKeys": Array [
        "5f7f98c50575a4a7e70a46ff35b72f4fe2a1ad3bc9a918b692d132d9c556bdf0",
        "ac574896c846b59477a9115b952563938c48d0096b84846c0b634a621e1774ed",
      ],
      "numberOfSignatures": 2,
      "optionalKeys": Array [],
    },
    "assetID": 0,
    "fee": "314000",
    "id": "88647ef68cb91c5796843a571da994edf175876469f51c2a826afa7aa3dc2a34",
    "moduleID": 4,
    "multiSignature": Object {
      "mandatoryKeys": Array [
        "5f7f98c50575a4a7e70a46ff35b72f4fe2a1ad3bc9a918b692d132d9c556bdf0",
        "ac574896c846b59477a9115b952563938c48d0096b84846c0b634a621e1774ed",
      ],
      "numberOfSignatures": 2,
      "optionalKeys": Array [],
    },
    "nonce": "8",
    "senderPublicKey": "ac574896c846b59477a9115b952563938c48d0096b84846c0b634a621e1774ed",
    "signatures": Array [
      "300716832537cc8930a8608fbf2e8ccce869411935ed863f721617e3d8a73253e645380758cac47f1a20a115b68146512ac4d89aa1c7a499c34a10c39bc63001",
      "e0fcd3edb757214bb5b21a34cba6e485b7d23262487b4f980bb30e833fb1c2a972fa425a7223366949389108527fab74bf1ac2a56d8b030b0ea0bbf87214f30b",
      "300716832537cc8930a8608fbf2e8ccce869411935ed863f721617e3d8a73253e645380758cac47f1a20a115b68146512ac4d89aa1c7a499c34a10c39bc63001",
    ],
    "timestamp": "2021-01-01T12:00:00.000Z",
  },
  "decimals": 8,
  "identifier": "88647ef68cb91c5796843a571da994edf175876469f51c2a826afa7aa3dc2a34",
  "signedData": Object {
    "asset": Object {
      "mandatoryKeys": Array [
        "5f7f98c50575a4a7e70a46ff35b72f4fe2a1ad3bc9a918b692d132d9c556bdf0",
        "ac574896c846b59477a9115b952563938c48d0096b84846c0b634a621e1774ed",
      ],
      "numberOfSignatures": 2,
      "optionalKeys": Array [],
    },
    "assetID": 0,
    "fee": "314000",
    "id": "88647ef68cb91c5796843a571da994edf175876469f51c2a826afa7aa3dc2a34",
    "moduleID": 4,
    "multiSignature": Object {
      "mandatoryKeys": Array [
        "5f7f98c50575a4a7e70a46ff35b72f4fe2a1ad3bc9a918b692d132d9c556bdf0",
        "ac574896c846b59477a9115b952563938c48d0096b84846c0b634a621e1774ed",
      ],
      "numberOfSignatures": 2,
      "optionalKeys": Array [],
    },
    "nonce": "8",
    "senderPublicKey": "ac574896c846b59477a9115b952563938c48d0096b84846c0b634a621e1774ed",
    "signatures": Array [
      "300716832537cc8930a8608fbf2e8ccce869411935ed863f721617e3d8a73253e645380758cac47f1a20a115b68146512ac4d89aa1c7a499c34a10c39bc63001",
      "e0fcd3edb757214bb5b21a34cba6e485b7d23262487b4f980bb30e833fb1c2a972fa425a7223366949389108527fab74bf1ac2a56d8b030b0ea0bbf87214f30b",
      "300716832537cc8930a8608fbf2e8ccce869411935ed863f721617e3d8a73253e645380758cac47f1a20a115b68146512ac4d89aa1c7a499c34a10c39bc63001",
    ],
    "timestamp": "2021-01-01T12:00:00.000Z",
  },
}
`;

exports[`TransactionService #multiSignature 3`] = `
SignedTransactionData {
  "bigNumberService": BigNumberService {
    "configRepository": ConfigRepository {},
  },
  "broadcastData": Object {
    "asset": Object {
      "mandatoryKeys": Array [
        "5f7f98c50575a4a7e70a46ff35b72f4fe2a1ad3bc9a918b692d132d9c556bdf0",
        "ac574896c846b59477a9115b952563938c48d0096b84846c0b634a621e1774ed",
      ],
      "numberOfSignatures": 2,
      "optionalKeys": Array [],
    },
    "assetID": 0,
    "fee": "314000",
    "id": "808fe64c94e7e651342cf8102d25626c68024638e038aa298c6074feb23fe34a",
    "moduleID": 4,
    "multiSignature": Object {
      "mandatoryKeys": Array [
        "5f7f98c50575a4a7e70a46ff35b72f4fe2a1ad3bc9a918b692d132d9c556bdf0",
        "ac574896c846b59477a9115b952563938c48d0096b84846c0b634a621e1774ed",
      ],
      "numberOfSignatures": 2,
      "optionalKeys": Array [],
    },
    "nonce": "8",
    "senderPublicKey": "ac574896c846b59477a9115b952563938c48d0096b84846c0b634a621e1774ed",
    "signatures": Array [
      "e8343b8618a2ea6babf9d9ceb1f5fd3aa8c79fd91b771c40ede0f5b49c32096be7eb2e114a4fb90e6f0f02c3a120834e712654fb14dd33c0374347ae4f3fa208",
      "e0fcd3edb757214bb5b21a34cba6e485b7d23262487b4f980bb30e833fb1c2a972fa425a7223366949389108527fab74bf1ac2a56d8b030b0ea0bbf87214f30b",
      "e8343b8618a2ea6babf9d9ceb1f5fd3aa8c79fd91b771c40ede0f5b49c32096be7eb2e114a4fb90e6f0f02c3a120834e712654fb14dd33c0374347ae4f3fa208",
    ],
    "timestamp": "2021-01-01T12:00:00.000Z",
  },
  "decimals": 8,
  "identifier": "808fe64c94e7e651342cf8102d25626c68024638e038aa298c6074feb23fe34a",
  "signedData": Object {
    "asset": Object {
      "mandatoryKeys": Array [
        "5f7f98c50575a4a7e70a46ff35b72f4fe2a1ad3bc9a918b692d132d9c556bdf0",
        "ac574896c846b59477a9115b952563938c48d0096b84846c0b634a621e1774ed",
      ],
      "numberOfSignatures": 2,
      "optionalKeys": Array [],
    },
    "assetID": 0,
    "fee": "314000",
    "id": "808fe64c94e7e651342cf8102d25626c68024638e038aa298c6074feb23fe34a",
    "moduleID": 4,
    "multiSignature": Object {
      "mandatoryKeys": Array [
        "5f7f98c50575a4a7e70a46ff35b72f4fe2a1ad3bc9a918b692d132d9c556bdf0",
        "ac574896c846b59477a9115b952563938c48d0096b84846c0b634a621e1774ed",
      ],
      "numberOfSignatures": 2,
      "optionalKeys": Array [],
    },
    "nonce": "8",
    "senderPublicKey": "ac574896c846b59477a9115b952563938c48d0096b84846c0b634a621e1774ed",
    "signatures": Array [
      "e8343b8618a2ea6babf9d9ceb1f5fd3aa8c79fd91b771c40ede0f5b49c32096be7eb2e114a4fb90e6f0f02c3a120834e712654fb14dd33c0374347ae4f3fa208",
      "e0fcd3edb757214bb5b21a34cba6e485b7d23262487b4f980bb30e833fb1c2a972fa425a7223366949389108527fab74bf1ac2a56d8b030b0ea0bbf87214f30b",
      "e8343b8618a2ea6babf9d9ceb1f5fd3aa8c79fd91b771c40ede0f5b49c32096be7eb2e114a4fb90e6f0f02c3a120834e712654fb14dd33c0374347ae4f3fa208",
    ],
    "timestamp": "2021-01-01T12:00:00.000Z",
  },
}
`;
